force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/leaseworks__LLP_Utilization_Snapshot__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>LLP Utilization Snapshot</label>
    <nameField>
        <label>LLP Utilization Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLP Utilization Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>