force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Component_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Component_Description__c</fullName>
    <label>Component Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>