force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Current_Thrust_Setting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Thrust_Setting__c</fullName>
    <label>Current Thrust Setting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>