force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Part_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Part_Number__c</fullName>
    <label>Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>