force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Thrust_Usage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Thrust_Usage__c</fullName>
    <label>Thrust Usage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>