force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Y_Hidden_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Cycles__c</fullName>
    <label>_Cycles</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>