force-app/main/default/objects/leaseworks__LLP_Utilization_Snapshot__c/fields/leaseworks__Y_Hidden_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Serial_Number__c</fullName>
    <label>_Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>